--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -28,10 +28,19 @@ html lang="ru"
           a.navbar-brand href="#" Сайт кафедры САПР
           .navbar-collapse.collapse.navbar-responsive-collapse
             ul.nav.navbar-nav
-              li= link_to "Link 1", "/path1"
+              - if current_user.present?
+                li= link_to "Выход", destroy_user_session_path, method: :delete
+              - else
+                li= link_to "Вход / Регистрация", new_user_session_path
               li= link_to "Link 2", "/path2"
               li= link_to "Link 3", "/path3"
     .container
       .row
+        - flash.each do |key, value|
+          div class=flash_class(key) role="alert"
+            button type="button" class="close" data-dismiss="alert" aria-label="Close"
+              span aria-hidden="true"
+                |&times;
+            = value
         .col-md-12
           = yield
