--- a/app/views/versions/new.html.slim
+++ b/app/views/versions/new.html.slim
@@ -1,5 +1,7 @@
-h1 New version
+h1
+  |Новая версия для материала
+  |&nbsp;
+  strong = @doc.name
 
-== render 'form'
+= render 'form'
 
-= link_to 'Back', versions_path
