--- a/app/views/docs/show.html.slim
+++ b/app/views/docs/show.html.slim
@@ -1,9 +1,31 @@
-p#notice = notice
-
 p
-  strong Name:
+  strong Название:
+  |&nbsp;
   = @doc.name
-
-= link_to 'Edit', edit_doc_path(@doc)
-'|
-= link_to 'Back', docs_path
+p
+  .btn-group role="group"
+    = link_to @doc.download_link, class: 'btn btn-primary' do
+      .fa.fa-download.fa-fw
+      | Скачать
+    = link_to new_doc_version_path(@doc), class: 'btn btn-info' do
+      .fa.fa-upload.fa-fw
+      | Обновить материал
+    = link_to edit_doc_path(@doc), class: 'btn btn-warning' do
+      .fa.fa-edit.fa-fw
+      | Редактировать материал
+    = link_to @doc, class: 'btn btn-danger', data: { confirm: 'Вы уверены?' }, method: :delete do
+      .fa.fa-trash.fa-fw
+      | Удалить материал
+p
+  strong Версии:
+  table.table.table-hover
+    tr
+      th Название
+      th Время создания
+      th
+    - @doc.versions.each do |v|
+      tr
+        td = v.path
+        td = v.created_at
+        td = link_to v.download_path, class: 'btn btn-primary' do
+          .fa.fa-download.fa-fw
