--- a/app/views/versions/_form.html.slim
+++ b/app/views/versions/_form.html.slim
@@ -1,10 +1,8 @@
-= simple_form_for(@version, html: { multipart: true }) do |f|
+= simple_form_for([@doc, @version], html: { multipart: true }) do |f|
   = f.error_notification
 
   .form-inputs
-    = f.association :doc, selected: @doc.try(:id)
-    = f.input :path
     = f.input :file, as: :file
 
   .form-actions
-    = f.button :submit
+    = f.button :submit, 'Создать версию'
