--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,8 +5,11 @@
 
   <div class="form-inputs">
     <%= f.input :email, required: true, autofocus: true %>
-    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
+    <%= f.input :password, required: true, hint: ("#{@minimum_password_length} символа минимум" if @validatable) %>
     <%= f.input :password_confirmation, required: true %>
+    <%= f.input :first_name %>
+    <%= f.input :last_name %>
+    <%= f.input :patronymic %>
   </div>
 
   <div class="form-actions">
