--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -25,7 +25,7 @@ html lang="ru"
             span.icon-bar
             span.icon-bar
             span.icon-bar
-          a.navbar-brand href="#" Сайт кафедры САПР
+          a.navbar-brand href=root_path Сайт кафедры САПР
           .navbar-collapse.collapse.navbar-responsive-collapse
             ul.nav.navbar-nav
               - if current_user.present?
@@ -34,6 +34,7 @@ html lang="ru"
               - else
                 li= link_to "Вход / Регистрация", new_user_session_path
               li= link_to "Материалы", docs_path
+              li= link_to "Объявления", ads_path
     .container
       .row
         - flash.each do |key, value|
