--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -82,6 +82,7 @@ html lang="ru"
 
     .container
       .row
+        = yield :breadcrumbs
         - flash.each do |key, value|
           div class=flash_class(key) role="alert"
             button type="button" class="close" data-dismiss="alert" aria-label="Close"
