--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -2,7 +2,7 @@
 @import "bootstrap"
 @import "font-awesome-sprockets"
 @import "font-awesome"
-@import "styles"
+/* @import "styles"
 
 /*
  *= require_self
