--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -4,6 +4,14 @@
 @import "font-awesome"
 /* @import "styles"
 
+@import 'masonry/basic'
+@import 'masonry/centered'
+@import 'masonry/fluid'
+@import 'masonry/gutters'
+@import 'masonry/infinitescroll'
+@import 'masonry/right-to-left'
+@import 'masonry/transitions'
+
 /*
  *= require_self
  */
