--- a/app/views/ads/index.html.slim
+++ b/app/views/ads/index.html.slim
@@ -2,11 +2,16 @@ h1 Список объявлений
 
 .text-center = paginate @ads, theme: 'twitter-bootstrap-3'
 
-.row
+#notice-collection
   - @ads.each do |ad|
-    .col-md-6
+    .col-md-6.notice-item
       .bs-callout.bs-callout-info
         h4 = ad.title
         p = ad.text.html_safe
+        .text-center.share-buttons
+          script charset="utf-8" src="//yastatic.net/share/share.js" type="text/javascript" 
+          .yashare-auto-init data-yasharel10n="ru" data-yasharequickservices="vkontakte,facebook,twitter,moimir" data-yasharetheme="counter" data-yasharetype="small"  data-yasharetitle=ad.title
+
+
 
 .text-center = paginate @ads, theme: 'twitter-bootstrap-3'
