employees was added without pretty show employee page

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -41,8 +41,7 @@ html lang="ru"
                     ul.dropdown-menu
                       li
                         a href="/about" О кафедре
-                      li
-                        a href="/employees" Сотрудники
+                      li = link_to "Сотрудники", employees_path
                       li
                         a href="/scientific_activity" Научная деятельность
                       li
