--- a/app/views/docs/index.html.slim
+++ b/app/views/docs/index.html.slim
@@ -1,7 +1,9 @@
 h1 Список материалов
 
 
-= link_to 'Новый материал', new_doc_path, class: 'btn btn-success'
+- if current_user.can_upload_doc?
+  br
+  = link_to 'Новый материал', new_doc_path, class: 'btn btn-success'
 
 br
 table.table.table-hover
@@ -22,11 +24,11 @@ table.table.table-hover
           .btn-group role="group"
             = link_to doc.download_link, class: 'btn btn-primary', title: 'Скачать' do
               .fa.fa-download.fa-fw
-            = link_to edit_doc_path(doc), class: 'btn btn-warning', title: 'Редактировать' do
-              .fa.fa-edit.fa-fw
-            = link_to doc, class: 'btn btn-danger', title: 'Удалить', data: { confirm: 'Вы уверены?' }, method: :delete do
-              .fa.fa-trash.fa-fw
-
-br
-
-= link_to 'Новый материал', new_doc_path, class: 'btn btn-success'
+            - if current_user.can_manage_doc?(doc)
+              = link_to edit_doc_path(doc), class: 'btn btn-warning', title: 'Редактировать' do
+                .fa.fa-edit.fa-fw
+              = link_to doc, class: 'btn btn-danger', title: 'Удалить', data: { confirm: 'Вы уверены?' }, method: :delete do
+                .fa.fa-trash.fa-fw
+- if current_user.can_upload_doc?
+  br
+  = link_to 'Новый материал', new_doc_path, class: 'btn btn-success'
