--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,6 +15,9 @@
     <%= f.input :last_name %>
     <%= f.input :first_name %>
     <%= f.input :patronymic %>
+    <% if resource.admin? || resource.teacher? %>
+      <%= f.input :ftp_path, disabled: true %>
+    <% end %>
     <%= f.input :current_password, hint: "введите ваш текущий пароль для подтверждения изменений", required: true %>
   </div>
 
