--- a/app/views/news/index.html.slim
+++ b/app/views/news/index.html.slim
@@ -5,13 +5,4 @@
     li.active Новости
 
 
-.col-md-10.col-md-offset-1
-  - @news.each do |news|
-    article.clearfix
-      .post-date
-        = news.created_at
-      h2
-        = link_to news.title, news
-      p
-        = news.short_description.html_safe
-        = link_to "Читать полностью", news
+.col-md-10.col-md-offset-1 = render 'collection', news: @news
