--- a/app/views/ads/_collection.html.slim
+++ b/app/views/ads/_collection.html.slim
@@ -1,3 +1,3 @@
 #notice-collection
   - ads.each do |ad|
-    .col-md-6.notice-item = render 'card', ad: ad
+    .col-md-6.notice-item = render 'ads/card', ad: ad
