--- a/app/views/home/page.html.slim
+++ b/app/views/home/page.html.slim
@@ -1,4 +1,9 @@
 - content_for :title do
   = @page.title
+- content_for :breadcrumbs do
+  ol.breadcrumb
+    li
+      a href=root_path  Главная
+    li.active = @page.title
 
 = @page.text.html_safe
