--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -40,6 +40,9 @@ html lang="ru"
     /[if lt IE 9]
       = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"
 
+    script src="//vk.com/js/api/openapi.js?116"
+    script
+      |VK.init({apiId: 4922862, onlyWidgets: true});
 
   body id="boxedLayout" class="header4"
     #globalWrapper
@@ -93,7 +96,6 @@ html lang="ru"
                     li= link_to "Объявления", ads_path
                     li= link_to "Трудоустройство", employment_ads_path
                     - if current_user.present?
-                      li= link_to "Редактировать профиль", edit_user_registration_path
                       li= link_to "Выход", destroy_user_session_path, method: :delete
                     - else
                       li= link_to "Вход / Регистрация", new_user_session_path
@@ -102,32 +104,62 @@ html lang="ru"
                   /   button.btn.btn-default name="submit" type="submit"
                   /     span.glyphicon.glyphicon-search
 
-
-      .container
-        .row
+        - if content_for?(:title) || content_for?(:description)
+          .page-header
+            .container
+              .row
+                .col-sm-6
+                  - if content_for?(:title)
+                    h1= yield :title
+                  - if content_for?(:description)
+                    p= yield :description
+                .col-sm-6.hidden-xs
+                  - if content_for?(:breadcrumbs)
+                    = yield :breadcrumbs
+        - else
           = yield :breadcrumbs
-          - flash.each do |key, value|
-            div class=flash_class(key) role="alert"
-              button type="button" class="close" data-dismiss="alert" aria-label="Close"
-                span aria-hidden="true"
-                  |&times;
-              = value
-          .col-md-9
-            = yield
-          aside.col-md-3
-            = form_tag '/search', method: :get do
-              .input-group
-                = text_field_tag :q, params[:q], placeholder: 'Поиск', class: 'form-control'
-                span.input-group-btn
-                  button.btn.btn-default.btn-lg type='submit'
-                    i.fa.fa-search
-            br
-            .panel.panel-info
-              .panel-heading
-                h4.text-center = link_to "Объявления", ads_path
-              .panel-body
-                - @side_ads.each do |ad|
-                  = render 'ads/card', ad: ad
+
+      section#content.pt30.mb30
+        .container
+          .row
+            /= yield :breadcrumbs
+            - flash.each do |key, value|
+              div class=flash_class(key) role="alert"
+                button type="button" class="close" data-dismiss="alert" aria-label="Close"
+                  span aria-hidden="true"
+                    |&times;
+                = value
+            .col-md-9
+              = yield
+            aside.col-md-3
+              = form_tag '/search', method: :get do
+                .input-group
+                  = text_field_tag :q, params[:q], placeholder: 'Поиск', class: 'form-control'
+                  span.input-group-btn
+                    button.btn.btn-default.btn-lg type='submit'
+                      i.fa.fa-search
+
+              - if current_user.present? && (current_user.teacher? || current_user.admin?)
+                br
+                ul.nav.nav-pills.nav-stacked
+                  li class="#{current_page?(edit_user_registration_path) ? 'active' : ''}"
+                    a href=edit_user_registration_path Мой профиль
+                  li class="#{current_page?(my_docs_path) ? 'active' : ''}"
+                    a href=my_docs_path
+                      span.badge.pull-right = current_user.docs.count
+                      | Мои материалы
+                  li class="#{current_page?(my_disciplines_path) ? 'active' : ''}"
+                    a href=my_disciplines_path
+                      span.badge.pull-right = current_user.disciplines.count
+                      | Мои дисциплины
+
+              br
+              .panel.panel-info
+                .panel-heading
+                  h4.text-center = link_to "Объявления", ads_path
+                .panel-body
+                  - @side_ads.each do |ad|
+                    = render 'ads/card', ad: ad
 
     script src="/js-plugin/respond/respond.min.js" type="text/javascript" 
     script src="/js-plugin/jquery-ui/jquery-ui-1.8.23.custom.min.js" type="text/javascript" 
