--- a/app/views/news/show.html.slim
+++ b/app/views/news/show.html.slim
@@ -3,12 +3,34 @@
     li
       a href=root_path Главная
     li
-      a href=news_path Новости
+      a href='/news' Новости
     li.active = @news.title
 
-.col-md-10.col-md-offset-1
-  h2 = @news.title
-  p = @news.text.html_safe
-  .text-center
-    script charset="utf-8" src="//yastatic.net/share/share.js" type="text/javascript" 
-    .yashare-auto-init data-yasharel10n="ru" data-yasharequickservices="vkontakte,facebook,twitter,moimir" data-yasharetheme="counter" data-yasharetype="small"  data-yasharetitle=@news.title
+- content_for :title
+  = @news.title
+article.post
+  section.col-sm-11.col-xs-10
+    h2
+      = link_to @news.title, @news
+    ul.entry-meta
+      li.entry-shows
+        a href="#"
+          i.fa.fa-eye
+          |&nbsp;
+          = @news.views
+      li.entry-date
+        a href="#"
+          i.fa.fa-calendar
+          |&nbsp;
+          = Russian::strftime @news.created_at, "%d %b, %Y %H:%M"
+      li.entry-author
+        a href="#"
+          i.fa.fa-user
+          |&nbsp; Администратор
+    p = @news.text.html_safe
+    .text-center
+      script charset="utf-8" src="//yastatic.net/share/share.js" type="text/javascript" 
+      .yashare-auto-init data-yasharel10n="ru" data-yasharequickservices="vkontakte,facebook,twitter,moimir" data-yasharetheme="counter" data-yasharetype="small"  data-yasharetitle=@news.title
+    #vk_comments
+    script
+      |VK.Widgets.Comments("vk_comments", {limit: 20, width: "800", attach: "*"});
