--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -47,62 +47,59 @@ html lang="ru"
   body id="boxedLayout" class="header4"
     #globalWrapper
       header
-        .top-menu
+        #mainHeader role="banner"
           .container
-            nav.navbar.navbar-default role="navigation" 
-                .navbar-header
-                  button.navbar-toggle data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button" 
-                    | Ìåíþ
-                    span.glyphicon.glyphicon-plus
-                    span.glyphicon.glyphicon-minus
-                #bs-example-navbar-collapse-1.collapse.navbar-collapse
-                  / form.navbar-form.navbar-right.search-hidden action="/search/" method="GET" 
-                  /   input.form-control name="submitted" placeholder="Ïîèñê..." type="text" /
-                  /   button.btn.btn-default name="submit" type="submit" 
-                  /     span.glyphicon.glyphicon-search
-                  ul.nav.navbar-nav
-                    li.dropdown
-                      a.dropdown-toggle data-toggle="dropdown" href=""
-                        |О кафедре
-                        span.caret
-                      ul.dropdown-menu
-                        li
-                          a href="/about" О кафедре
-                        li = link_to "Сотрудники", employees_path
-                        li
-                          a href="/scientific_activity" Научная деятельность
-                        li
-                          a href="/contacts" Контакты
-
-                    li.dropdown
-                      a.dropdown-toggle data-toggle="dropdown" href=""
-                        |Информация
-                        span.caret
-                      ul.dropdown-menu
-                        li
-                          a href="/for_applicants" Абитуриентам
-                        li
-                          a href="/for_students"  Студентам
-                        li
-                          a href="/for_teachers"  Преподавателям
-                        li
-                          a href="/postgraduate_school"  Аспирантура
-                    li
-                      a href="/library" Библиотека
-                    li
-                      a href="/news"  Новости
-                    li = link_to "Расписание", timetables_path
-                    li= link_to "Материалы", docs_path
-                    li= link_to "Объявления", ads_path
-                    li= link_to "Трудоустройство", employment_ads_path
-                    - if current_user.present?
-                      li= link_to "Выход", destroy_user_session_path, method: :delete
-                    - else
-                      li= link_to "Вход / Регистрация", new_user_session_path
-                  / form.navbar-form.navbar-right.hidden action="/search" method="GET"
-                  /   input.form-control name="submitted" placeholder="Поиск" type="text"
-                  /   button.btn.btn-default name="submit" type="submit"
-                  /     span.glyphicon.glyphicon-search
+            nav.navbar.navbar-default.scrollMenu role="navigation"
+              .navbar-header
+                button.navbar-toggle data-target=".navbar-collapse" data-toggle="collapse" type="button"
+                  span.sr-only Toggle navigation
+                  span.icon-bar
+                  span.icon-bar
+                  span.icon-bar
+                a.navbar-brand href=root_path
+                  img alt=("Сайт кафедры САПР") src="images/main-logo.png"
+              #mainMenu.collapse.navbar-collapse
+                ul.nav.navbar-nav.pull-right
+                  li.primary
+                    a.firstLevel.hasSubMenu href="#" О кафедре
+                    ul.subMenu style="display: none;"
+                      li
+                        a href="/about" О кафедре
+                      li = link_to "Сотрудники", employees_path
+                      li
+                        a href="/scientific_activity" Научная деятельность
+                      li.last
+                        a href="/contacts" Контакты
+                  li.sep
+                  li.dropdown
+                    a.firstLevel.hasSubMenu href="#" Информация
+                    ul.subMenu style="display: none;"
+                      li
+                        a href="/for_applicants" Абитуриентам
+                      li
+                        a href="/for_students"  Студентам
+                      li
+                        a href="/for_teachers"  Преподавателям
+                      li.last
+                        a href="/postgraduate_school"  Аспирантура
+                  li.sep
+                  li
+                    a href="/news"  Новости
+                  li.sep
+                  li = link_to "Расписание", timetables_path
+                  li.sep
+                  li= link_to "Материалы", docs_path
+                  li.sep
+                  li= link_to "Объявления", ads_path
+                  li.sep
+                  li= link_to "Трудоустройство", employment_ads_path
+                  li.sep
+                  - if current_user.present?
+                    li= link_to "Выход", destroy_user_session_path, method: :delete
+                    li.sep
+                  - else
+                    li= link_to "Вход / Регистрация", new_user_session_path
+                    li.sep
 
         - if content_for?(:title) || content_for?(:description)
           .page-header
