--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -57,7 +57,7 @@ html lang="ru"
                   span.icon-bar
                   span.icon-bar
                 a.navbar-brand href=root_path
-                  img alt=("Сайт кафедры САПР") src="images/main-logo.png"
+                  img alt=("Сайт кафедры САПР") src="/images/sapr_logo.jpg" style="height: 44px;"
               #mainMenu.collapse.navbar-collapse
                 ul.nav.navbar-nav.pull-right
                   li.primary
