--- a/app/views/employees/index.html.slim
+++ b/app/views/employees/index.html.slim
@@ -4,7 +4,7 @@
       a href=root_path  Главная
     li.active Сотрудники
 
-
-h1 Список сотрудников
+- content_for :title do
+  |Cотрудники
 
 = render 'collection', employees: @employees
