--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,7 +4,7 @@ html lang="ru"
     meta charset="utf-8"
     meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    title= content_for?(:title) ? yield(:title) : "Сайт кафедры САПР"
+    title= content_for?(:title) ? "#{yield(:title)} — Сайт кафедры САПР - ПГУ" : "Сайт кафедры САПР - ПГУ"
     = csrf_meta_tags
     = stylesheet_link_tag "application", :media => "all"
     /! Bootstrap
