--- a/app/views/disciplines/my.html.slim
+++ b/app/views/disciplines/my.html.slim
@@ -5,29 +5,8 @@
     li.active Мои дисциплины
 
 - content_for :title do
-  |Список дисциплин
+  |Мои дисциплины
 
 = link_to 'Новая дисциплина', new_discipline_path, class: 'btn btn-success'
-
-table.table.table-hover
-  colgroup
-    col
-    col
-    col width="15%"
-  thead
-    tr
-      th Название
-      th Описание
-      th
-
-  tbody
-    - @disciplines.each do |discipline|
-      tr
-        td = discipline.name
-        td = discipline.description
-        td
-          .btn-group role="group"
-            = link_to edit_discipline_path(discipline), class: 'btn btn-warning', title: 'Редактировать' do
-              .fa.fa-edit.fa-fw
-            = link_to discipline, class: 'btn btn-danger', title: 'Удалить', data: { confirm: 'Вы уверены?' }, method: :delete do
-              .fa.fa-trash.fa-fw
+br
+= render "disciplines/collection", disciplines: @disciplines
