--- a/app/views/docs/edit.html.slim
+++ b/app/views/docs/edit.html.slim
@@ -1,8 +1,6 @@
-h1 Editing doc
+h1
+  |Редактирование материала
+  .label.label-info = @doc.name
 
-== render 'form'
-
-= link_to 'Show', @doc
-'|
-= link_to 'Back', docs_path
+= render 'form'
 
