--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,1 +1,33 @@
 /* Put your custom css here */
+
+@media (min-width: 320px) {
+  .navbar-brand img {
+    height: 75px;
+    margin-top: -19px;
+  }
+}
+@media (min-width: 480px) {
+  .navbar-brand img {
+    height: 75px;
+    margin-top: -19px;
+  }
+}
+@media (min-width: 768px) {
+  .navbar-brand img {
+    height: 80px;
+    margin-top: -15px;
+  }
+}
+@media (min-width: 1200px) {
+  .navbar-nav > li > a {
+    line-height: 60px;
+  }
+  .navbar-brand img {
+    height: 100px;
+    margin-top: -17px;
+  }
+}
+
+body {
+  padding-top: 0;
+}
