--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,7 +4,7 @@ html lang="ru"
     meta charset="utf-8"
     meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    title= content_for?(:title) ? "#{yield(:title)} — Сайт кафедры САПР - ПГУ" : "Сайт кафедры САПР - ПГУ"
+    title= content_for?(:title) ? "#{yield(:title)} | Сайт кафедры САПР - ПГУ" : "Сайт кафедры САПР - ПГУ"
     = csrf_meta_tags
     = stylesheet_link_tag "application", :media => "all"
     /! Bootstrap
@@ -140,10 +140,12 @@ html lang="ru"
                   span.input-group-btn
                     button.btn.btn-default.btn-lg type='submit'
                       i.fa.fa-search
-
               - if current_user.present? && (current_user.teacher? || current_user.admin?)
                 br
                 ul.nav.nav-pills.nav-stacked
+                  - if current_user.admin?
+                    li
+                      a href='/admin' Администраторская часть
                   li class="#{current_page?(edit_user_registration_path) ? 'active' : ''}"
                     a href=edit_user_registration_path Мой профиль
                   li class="#{current_page?(my_docs_path) ? 'active' : ''}"
