hiding docs and disciplines

--- a/app/views/disciplines/_form.html.slim
+++ b/app/views/disciplines/_form.html.slim
@@ -4,6 +4,7 @@
   .form-inputs
     = f.input :name
     = f.input :description
+    = f.input :published
 
   .form-actions
-    = f.button :submit
+    = f.button :submit, (@discipline.new_record? ? "Создать дисциплину" : "Обновить дисциплину")
