--- a/app/views/disciplines/new.html.slim
+++ b/app/views/disciplines/new.html.slim
@@ -1,5 +1,12 @@
-h1 Новая дисциплина
+- content_for :breadcrumbs do
+  ol.breadcrumb
+    li
+      a href=root_path  Главная
+    li
+      a href=disciplines_path  Дисциплины
+    li.active Новая дисциплина
+
+- content_for :title do
+  |Новая дисциплина
 
 == render 'form'
-
-= link_to 'Back', disciplines_path
